# shob

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri-build.yml
.husky/: pre-commit
apps/desktop/: package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/src/: App.tsx  electron.d.ts  index.css
docs/superpowers/plans/: 2026-05-09-opencode-tool-ui-port.md  2026-05-15-react-to-solidjs-migration.md
docs/superpowers/specs/: 2026-05-09-opencode-tool-ui-port.md  2026-05-15-react-to-solidjs-migration-design.md
electron/: main.ts  preload.ts  session-db.ts
electron/icons/: icon.icns
scripts/: build-server.mjs  dev-electron.mjs
src/: App.tsx  electron.d.ts  index.css  main.tsx  tauri-controls.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AgentView.tsx  BottomTerminalPanel.tsx  CliAvatar.tsx  FileTree.tsx  MainView.tsx  SettingsPage.tsx  Sidebar.tsx  TabBar.tsx  Terminal.tsx  TitleBar.tsx  TodoDock.tsx  WelcomeScreen.tsx  index.ts
src/components/AgentView/: Composer.tsx  EmptyState.tsx  MessageGroupRenderer.tsx  ModelSelector.tsx  index.tsx
src/config/: check.ts
src/constants/: storage.ts
src/hooks/: use-mobile.ts
src/services/: api.ts
src/store/: index.ts
src/theme/: index.ts
src/types/: index.ts
src/utils/: opencode-models.ts  storage.ts  string.ts
(+161 files in other folders)
