[package]
name = "shob"
version = "0.0.1"
description = "A Tauri-based terminal emulator"
authors = ["you"]
edition = "2021"

[lib]
name = "shob_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "rt"] }
parking_lot = "0.12"
dirs = "5"
notify = "6"
base64 = "0.22"
tauri-plugin-os = "2.3.2"
tauri-plugin-pty = "0.2.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
